Made ItemStackBuilder and GUIInventory more tolerant with some method parameters